--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="https://github.com/user-attachments/assets/d802a2a1-d9f8-4c4e-8cd4-0218292b3f59" type="image/x-icon">
     <link rel="shortcut icon" href="path/to/your/favicon.ico" type="image/x-icon">
 
-    <title>메탄동 아름다운교회</title>
+    <title>매탄동 아름다운교회</title>
      <style>
       body {
           background-image: url('https://github.com/user-attachments/assets/9344b4f8-4491-413b-a5b2-aeecd32aa285'); /* 이미지 URL을 여기에 입력 */
