--- a/오시는길/directions .html
+++ b/오시는길/directions .html
@@ -8,7 +8,7 @@
     <link rel="icon" href="https://github.com/user-attachments/assets/d802a2a1-d9f8-4c4e-8cd4-0218292b3f59" type="image/x-icon">
     <link rel="shortcut icon" href="path/to/your/favicon.ico" type="image/x-icon">
     <link href="./directions.css" rel="stylesheet" >
-    <title>메탄동 아름다운교회</title>
+    <title>매탄동 아름다운교회</title>
 </head>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
