--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     document.querySelector('.close-btn').addEventListener('click', closeBanner);
 
     // 제목과 내용 처리
-    let string = "(배너 TEST!) -새로운 기능이 생겼습니다.-바로 배너 기능입니다! -PC로 접속해서 배너를 클릭하여 움직이세요!-모바일에서는 배너를 움직일 수 없습니다.-x를 누르면 삭제됩니다.";
+    let string = "(배너 TEST!) -새로운 기능이 생겼습니다.-바로 배너 기능입니다! -배너를 클릭하여 움직이세요! x를 누르면 삭제됩니다.";
     const br_value = "<br>";
     const output = [];
     const h2_output = [];
