--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     document.querySelector('.close-btn').addEventListener('click', closeBanner);
 
     // 제목과 내용 처리
-    let string = "(배너 TEST!) -새로운 기능이 생겼습니다.-바로 배너 기능입니다! -PC로 접속해서 배너를 클릭하여 움직이세요! -모바일에서는 배너를 움직일 수 없습니다.-x를 누르면 삭제됩니다.";
+    let string = "(든든히 세워져가는 교회) -그리하여 온 유대와 갈릴리와-사마리아 교회가 평안하여 -든든히 서 가고 주를 경외함과 성령의 -위로로 진행하여 수가 더 많아지니라";
     const br_value = "<br>";
     const output = [];
     const h2_output = [];
@@ -213,8 +213,10 @@
       
   
   <div class="banner" id="myBanner" onmousedown="startDrag(event)">
+    <div style="font-size: 17px;">2025년</div>
     <h3 id="myh2"></h3>
     <span id="mySpan"></span> 
+    <div style="font-size: 15px;">- 사도행전 9:31 -</div>
     <button class="close-btn" onclick="closeBanner()">X</button>
 </div>
 
