--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
           <div class="on_off_line" >
               <div class="end" > <dd>경기 수원시 영통구 인계로220번길 6-39  </dd></div>
               <div class="end" > <dd> <i class="fas fa-volume-control-phone" aria-hidden="true"></i> 031-213-7141</dd></div>
+               <div class="end" > <dd> <i class="fas fa-volume-control-phone" aria-hidden="true"></i>  031 213 7142</dd></div>
           </div>
       </div>
     </div>
